--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
     <meta name="viewport" content="width=device-width">
     <title>Creatica</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <script src="/script.js" defer></script>
   </head>
   <body>
     <nav>
       <a class="active" href="index.html">HOME</a>
       <a href="about.html">ABOUT</a>
     </nav>
-  <h1> Endangered Species</h1>
-  <br>
-  <h4> This is a website that portrays a map in which you can view endangered species. </h4>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <center class="page">
+      <h1> Endangered Species </h1>
+      <h2> View endangered species and species of concern from each state! </h2>
+      <h2 class="blurb"> Endangered species are a species of animals or plants that are at a high risk of extinction. Thousands of animals and plants are endangered. It is important to raise awareness about which species are endangered in order to gain the public's support in preventing the extinction of that species. </h2> <br>
+
+      <form>
+        <h3>Don't Know Which State to Explore?</h3>
+        <label>Your Name:
+          <input class="name-input" type="text" placeholder="Name">
+        </label>
+        <br>
+        <button class="btn">Submit</button>
+      </form>
+      <section class="space"></section>
+
+    </center>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
