--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Creatica</title>
+    <title>About</title>
+    <link rel="shortcut icon" type="image/jpg" href="logo.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="about.css" rel="stylesheet" type="text/css" />
   </head>
@@ -11,12 +12,13 @@
   <body>
      <nav>
       <a href="index.html">HOME</a>
+      <a href="resources.html">RESOURCES</a>
       <a class="active" href="about.html">ABOUT</a>
     </nav>
 
     <center class="page">
     <h1>About Us</h1>
-    <h4>Adrianna, Rachel, Sophie, and Maryam created a team together to participate in Creatica's 2021 Hackathon. They wanted to bring awareness to the environment and biodiversity is an important part of the environment. Thus, their project revolved around educating people in the USA about endangered species either in their state or in the rest of the country. The team hopes that by educating others, they will take action in conserving those species at risk of extinction!
+    <h4>Adrianna, Rachel, Sophie, and Maryam created a team together to participate in Creatica's 2021 Hackathon. They wanted to bring awareness to the environment and biodiversity is an important part of the environment. Thus, their project revolved around educating people in the United States about endangered species either in their state or in the rest of the country. The team hopes that by educating others, they will take action in conserving those species at risk of extinction!
     </h4>
     <h2>These Animals Do Not Deserve To Have Their Lives At Risk!!</h2>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
