--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Creatica</title>
+    <title>S.A.R</title>
+    <link rel="shortcut icon" type="image/jpg" href="logo.png"/>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav>
       <a class="active" href="index.html">HOME</a>
+      <a href="resources.html">RESOURCES</a>
       <a href="about.html">ABOUT</a>
     </nav>
     <center class="page">
       <h1> Endangered Species </h1>
       <h2> View endangered species and species of concern from each state! </h2>
-      <h2 class="blurb"> Endangered species are a species of animals or plants that are at a high risk of extinction. Thousands of animals and plants are endangered. It is important to raise awareness about which species are endangered in order to gain the public's support in preventing the extinction of that species. </h2> <br>
+      <a href="map.html" target="_blank"><img class="map" src="map.png"></a>
+      <h2 class="blurb" style="background-image: url('https://images.unsplash.com/photo-1567331711402-509c12c41959?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=816&q=80')"> Endangered species are a species of animals or plants that are at a high risk of extinction. Thousands of animals and plants are endangered. It is important to raise awareness about which species are endangered in order to gain the public's support in preventing the extinction of those species. The data that we used in the making of this project was from 2016. Between 50,000 to 500,000 species have already gone extinct since.</h2> <br>
 
       <form>
         <h3>Don't Know Which State to Explore?</h3>
