--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>S.A.R</title>
-    <link rel="shortcut icon" type="image/jpg" href="logo.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="https://t4.ftcdn.net/jpg/01/88/64/25/360_F_188642534_388RfxlHLCZziGNhJ15IKMJR6r4FHbKA.jpg"/>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
